src/objects/FinServ__FinancialAccountRole__c.object
<CustomObject>
    <description>Represents the role occupied by a person or organizational entity that is involved with a financial account, such as a beneficiary or trustee.</description>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>FinServ__FinancialAccount__r.FinServ__Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the organizational entity or person currently occupies this role.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this field is read-only or editable.</description>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__EndDate__c</fullName>
        <description>End date when the organizational entity or person relinquished this role.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <description>Financial account that this role is related to.</description>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Financial Account Roles</relationshipLabel>
        <relationshipName>FinancialAccountRoles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the organizational entity that is involved with the financial account.</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Roles</relationshipLabel>
        <relationshipName>FinancialAccountRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the person who is involved with the financial account.</description>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Account Roles</relationshipLabel>
        <relationshipName>FinancialAccountRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Role__c</fullName>
        <description>Role that describes how the organizational entity or person is involved with the financial account.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Additional Owner</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Annuitant</fullName>
                </value>
                <value>
                    <fullName>Appoint / Remove Authority</fullName>
                </value>
                <value>
                    <fullName>Authorized Agent</fullName>
                </value>
                <value>
                    <fullName>Authorized Agent / Beneficial Owner</fullName>
                </value>
                <value>
                    <fullName>Authorized Individual</fullName>
                </value>
                <value>
                    <fullName>Authorized Signer</fullName>
                </value>
                <value>
                    <fullName>Beneficial Owner</fullName>
                </value>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Business Manager</fullName>
                </value>
                <value>
                    <fullName>Committee Member</fullName>
                </value>
                <value>
                    <fullName>Conservator</fullName>
                </value>
                <value>
                    <fullName>Control Person</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Cosigner</fullName>
                </value>
                <value>
                    <fullName>Custodian</fullName>
                </value>
                <value>
                    <fullName>Deceased Grantor</fullName>
                </value>
                <value>
                    <fullName>Decedent</fullName>
                </value>
                <value>
                    <fullName>Discretionary</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Full Authority</fullName>
                </value>
                <value>
                    <fullName>Grantor</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Insured</fullName>
                </value>
                <value>
                    <fullName>Interested Party</fullName>
                </value>
                <value>
                    <fullName>Minor Primary Owner</fullName>
                </value>
                <value>
                    <fullName>Original Depositor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StartDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Start date when the organizational entity or person assumed this role.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinancialAccountCategory__c</fullName>
        <formula>TEXT(FinServ__FinancialAccount__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Account Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Record_Type__c</fullName>
        <formula>FinServ__FinancialAccount__r.FinServ__RecordTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLinkingPrimaryOwner__c</fullName>
        <description>Return TRUE if the role is linking a financial account to its primary owner</description>
        <formula>IF(
					FinServ__FinancialAccount__r.FinServ__PrimaryOwner__c =   FinServ__RelatedAccount__c , TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLinkingPrimaryOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLoan__c</fullName>
        <formula>FinServ__FinancialAccount__r.IsLoan__c</formula>
        <label>IsLoan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeIcon__c</fullName>
        <formula>CASE(FinServ__FinancialAccount__r.Category__c, &apos;Retail&apos;, IMAGE(&quot;/resource/res/img/retail.png&quot;, &quot;Retail Product&quot;, 30, 78), &apos;Commercial&apos;, IMAGE(&quot;/resource/res/img/commercial.png&quot;, &quot;Commercial Product&quot;, 30, 78), IMAGE(&quot;/resource/res/img/wealth.png&quot;, &quot;Wealth Product&quot;, 30, 78))</formula>
        <label>Financial Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(FinServ__FinancialAccount__r.FinServ__FinancialAccountType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Financial Account Role</label>
    <nameField>
        <displayFormat>FAR-{000000000}</displayFormat>
        <label>Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Roles</pluralLabel>
    <recordTypes>
        <fullName>FinServ__AccountRole</fullName>
        <active>true</active>
        <description>Role occupied by an organizational entity, such as a corporation or LLC</description>
        <label>Account Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__ContactRole</fullName>
        <active>true</active>
        <description>Role occupied by a person</description>
        <label>Contact Role</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FinServ__CannotCreateInactiveRecord</fullName>
        <active>true</active>
        <description>Ensures that a record cannot be created as Inactive</description>
        <errorConditionFormula>ISBLANK(FinServ__EndDate__c) &amp;&amp; NOT(FinServ__Active__c)</errorConditionFormula>
        <errorMessage>A Financial Account Role cannot be created as Inactive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__FARCannotBeModified</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISCHANGED(FinServ__RelatedAccount__c),ISCHANGED(FinServ__RelatedContact__c),ISCHANGED(FinServ__FinancialAccount__c),ISCHANGED(FinServ__Role__c)),NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>This record cannot be edited. To update role information, you can deactivate this record and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__InactiveFARCannotBeEdited</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PRIORVALUE(FinServ__Active__c) == false,NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Inactive record cannot be edited. To update FAR, you can create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__InactiveRecordCannotBeReactivated</fullName>
        <active>true</active>
        <description>Ensures that inactive records cannot be reactivated.</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>Inactive Financial Roles cannot be reactivated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__OwnershipRolesCannotBeDeactivated</fullName>
        <active>true</active>
        <description>Enforces that changes to primary roles cannot be deactivated.</description>
        <errorConditionFormula>(FinServ__Editable__c == false) &amp;&amp;
        (ISCHANGED( FinServ__Active__c ))</errorConditionFormula>
        <errorMessage>This record cannot be deactivated because ownership can be updated on the financial account only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__OwnershipRolesCannotBeModified</fullName>
        <active>true</active>
        <description>Enforces that changes to Related Contact, Related Account, Role fields are not allowed when fields are non editable.</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>This record cannot be modified because ownership can be specified on the financial account only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__RelatedAccountOrContactRequired</fullName>
        <active>true</active>
        <description>Enforce selection of the correct lookup relationship: either a Related Account or Related Contact.</description>
        <errorConditionFormula>ISBLANK(FinServ__RelatedContact__c) &amp;&amp; ISBLANK( FinServ__RelatedAccount__c)</errorConditionFormula>
        <errorMessage>Either Related Account or Related Contact is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__RoleIsMandatory</fullName>
        <active>true</active>
        <description>Enforces that the Role__c field is mandatory when a FinancialAccountRole__c object is created.</description>
        <errorConditionFormula>ISBLANK(TEXT(FinServ__Role__c))</errorConditionFormula>
        <errorMessage>Role is required.</errorMessage>
    </validationRules>
</CustomObject>